# tuimux

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  compile.sh  rustfmt.toml  tuimux
docs/: PROBLEMS.md  PROJECT.md
src/: lib.rs  main.rs
src/app/: actions.rs  backup.rs  backup_restore.rs  export.rs  input.rs  mod.rs  restore.rs  runtime.rs  state.rs
src/tmux/: interface.rs  mod.rs  session.rs
src/tmux/interface/: inspect.rs  manage.rs  restore.rs
src/ui/: details.rs  help.rs  layout.rs  mod.rs  modal.rs  theme.rs  tree.rs
